[tool.poetry]
name = "loco"
version = "0.1.0"
description = "Progressive lowcode python app"
authors = ["c6401 <nc6401+gthb@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
